--- a/css/styles.css
+++ b/css/styles.css
@@ -1,201 +1,22 @@
 
- :root{
-  /* --primary-text-color:rgba 0,0,0,0.8; */
-  --title-text-color:#212121;
-  --accent-color: #2196F3;
-  --secondary-color: #757575;
-  
-  --primary-white-color:#FFFFFF;
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
-
-}
 
 
 
-body{
- 
-  background-color:#FFFFFF;
-  color:var(--title-text-color);
-  font-family: Roboto, sans-serif;
-  
-}
 
-a{
-  text-decoration: none; 
-}
-li{
-  list-style: none;       
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p{
-  margin-top: 0;
-  margin-bottom: 0
-}
-ul{
-list-style: none;   
-margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;         
-  }
-   img{ 
-      display: block;
-     max-width: 100%;
-      height: auto;
-    }
-
-
-.section{
-    /* padding-top: 0; */
-    padding-top: 94px;
-    padding-bottom: 94px;
-   
-} 
-.header{
- border-bottom: 1px solid #ECECEC;
-}  
-
-.container{ 
- width: 1200px;
-padding-left: 15px;  
-padding-right: 15px; 
-margin-left: auto;
-margin-right: auto;
- 
-}
-
-.header-logo{
-display: flex;
-
-color: var(--accent-color);
-font-family: Raleway, sans-serif;
-font-size: 26px;
-font-weight: 700;
-line-height: 1.19;
-letter-spacing: 0.03em;
-margin-right: 93px;
-
-}
-
-.header-logo-link{
-      color: var(--title-text-color) 
-      
-  }
-   .header-items{ 
-      display: flex;
-      align-items:center;
-  }
-   .header-list{ 
-      display:flex; 
-        } 
-     
-  
-   .header-item:not(:last-child){
- margin-right: 50px;
-  }   
-    
-  .header-item{
-          display:flex;
-          align-items: center;
-          font-size: 14px;
-          font-weight: 500;
-          line-height: 1.17;
-          letter-spacing: 0.03em;
-          text-align: left;
-      }    
-    
-      .current::after{
-       content: '';
-       position: absolute;
-       left: 0;
-       bottom: 0;
-       display: block;
-       width: 100%;
-       height: 4px;
-       background-color: var(--accent-color);
-      
-      }
-
-       .header-link  {
-          position: relative;
-          padding-top: 32px;
-          padding-bottom: 32px;
-          font-weight: 500;
-          font-size: 14px;
-          line-height: 1.14;
-          letter-spacing: 0.02em;
-          color: var(--title-text-color);
-          transition:color 250ms var(--timing-function);
-         }
-         .current{
-          color: var(--accent-color);
-           }
- 
-         .header-link:hover,
-          .header-link:focus{  
-           color: var(--accent-color);
-  }
- 
-  .main-header{
-      display: flex;
-      align-items: center;
-  }
-  
-/* .contacs{  */
- 
-.mail-link{
-    display: flex;
-    align-items:center;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-      color: var(--secondary-color);
-      padding-top: 32px;
-      padding-bottom: 32px;
-      transition:color 250ms var(--timing-function);
-    }
-  .header-contacs .link:hover,
-  .header-contacs .link:focus{
- color: var( --accent-color);
-   }
- .contacs {
- margin-left: auto; 
-  display: flex;
-}
- .header-contacs{
-  display: flex;
-  align-items:center;
-}
-.header-contacs:not(:last-child){
-margin-right:30px;
-}
-.mail-icon{
- margin-right: 10px;
- fill: currentColor;
-}
-.phone-icon{
-   margin-right: 10px;
-   fill: currentColor;
-}
 
  /* PORTFOLIO */
    .filter-list{
      margin-bottom: 50px;
      justify-content: center; 
-      display: flex;
-      color:var(title-text-color); 
+     display: flex;
+     color:var(title-text-color); 
     }
    
-       .filter-item:not(:last-child){
-        margin-right: 8px; 
-       }
+   .filter-item:not(:last-child){
+     margin-right: 8px; 
+   }
      
-        .filter-button{
+    .filter-button{
         border:transparent;
         cursor:pointer;
         font-size: 16px;
@@ -208,7 +29,7 @@ margin-right:30px;
          transition:color 250ms var(--timing-function),background-color 250ms var(--timing-function),box-shadow 250ms var(--timing-function);
      }
       
-        .filter-button:hover,
+     .filter-button:hover,
      .filter-button:focus{
        background-color: var(--accent-color);
        color: var(--primary-white-color);
@@ -226,13 +47,13 @@ margin-right:30px;
           
         .portfolio-items{
           
-            flex-basis:calc(100% / 3 -30px);
-            margin-left:30px;
-            margin-top: 30px;  
+          flex-basis:calc(100% / 3 -30px);
+          margin-left:30px;
+          margin-top: 30px;  
           } 
-           .portfolio-link{
-             display: block;
-             text-decoration: none;
+        .portfolio-link{
+          display: block;
+            text-decoration: none;
            }
            .portfolio-link:hover,
            .portfolio-link:focus{
@@ -468,240 +289,19 @@ margin-right:30px;
 
        /* HERO */
      
-       .section-hero{
-      background-color:#2F303A ;
-      padding-top: 200px; 
-      padding-bottom: 200px;
-      background-image:linear-gradient(rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4)) 
-      ,url(../images/team/hero-team.jpg); 
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-     }
-       .hero-title{
-      font-size: 44px;
-      font-weight: 900;
-      line-height:1.36;
-      letter-spacing: 0.06em;
-      text-align: center;
-      color: var(--primary-white-color);
-      text-transform: uppercase;
-      margin-bottom: 30px;
-       
-      }
-
-     .hero-button:hover,   
-     .hero-button:focus{
-      background-color: var(--accent-color);
-     }
-     .hero-button{
-      display: block;
-
-      cursor: pointer;
-      width: 200px;
-      height: 50px;
-      border-radius:4px;
-      border:transparent;
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 1.85;
-      letter-spacing: 0.06em;
-      text-align: center;
-      background-color:#188CE8;
-      color: var(--primary-white-color);
-      margin-left: auto;
-      margin-right: auto;
-      transition: backgroud-color 250ms var(--timing-function);
-      }
+     
        /* FEATURE */
      
-      .feature{
-        display: flex;
-      }
-      .feature-pic{
-      display: flex;
-      justify-content: center;
-      align-items:center;
-      margin-bottom: 30px;
-      width:270px ;
-      height: 110px;
-      background-color: #f4f5f4;
-       border-radius: 4px;
-    }
-
-   .feature-item:not(:last-child){
-         margin-right: 30px; 
-       
-     }
     
-     .visually-hidden {
-      position: absolute;
-      clip: rect(0 0 0 0);
-      width: 1px;
-      height: 1px;
-      margin: -1px;
-    }
-   .visually-hidden {
-  
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
-    clip: rect(0 0 0 0);
-   }
-      
-    .feature-title{
-     color: var(title-text-color);
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 1.14;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-      }
-    
-      .feature-text{
-      color: var(--secondary-color);
-      font-size: 14px;
-      line-height: 1.7;
-      letter-spacing: 0.03em;
-       }
      
       /* WORKS */
-          .works-section{
-            padding-top: 0;
-          }
-          .works-title{
-          
-          margin-bottom: 50px; 
-          font-size: 36px;    
-          font-weight: 700;
-          line-height: 1.16;
-          letter-spacing: 0.03em;
-          text-align: center; 
-          color: var(--title-text-color);   
-      }
-      .works-head{
-       width: 100%;
-       height: 70px;
-       position: absolute;
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       bottom: 0;
-       font-size: 14px;
-        font-weight: 700;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-align: center;
-
-      background-color: rgba(47,48,58,0.8); 
-      color: var(--primary-white-color);
-      }
-      .works-deck{
-        position: relative;
-        }
-     
-      .works-list{
-       display: flex;
-       }
-    
-      .works-item{
-       width: 370px;
-      }
-       .works-item:not(:last-child){ 
-          margin-right: 30px;
-      }
+        
 
           /* TEAM */
-          .section-team{
-          background-color: #F5F4FA;
-          }
-            .team-title{ 
-             margin-bottom: 50px;
-              font-size: 36px;
-              font-weight: 700;
-              line-height: 1.16;
-              letter-spacing: 0.03em;
-              text-align: center; 
-      } 
-         
-       .team-items{ 
-        display: flex;
-        margin-left: -30px; 
-         }
-          .team-items> .team-img{ 
-          flex-basis: calc(100% /4 -30px); 
-          margin-left:30px; 
-          border-bottom-left-radius: 4px; 
-          border-bottom-right-radius: 4px;
-           background-color: #FFFFFF;
-         }  
-
-        .present-team{
-          font-size: 16px;
-          font-weight: 500;
-          line-height: 1.18;
-          letter-spacing: 0.03em;
-          color: var(--title-text-color); 
-         
-      }
-
-      .team-text{
-       font-size: 16px;
-      font-weight: 400;
-      line-height: 19px;
-      letter-spacing: 0.03em;
-      color: var(--secondary-color);  
-       margin-top: 10px;
-       margin-bottom: 16px;
-       }
-      .card-thumb{
-        align-items:center;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        background-color: white;
-        text-align: center;
-      }
-      .socials-list{
-       justify-content: center;
-        display: flex;
-        
-      }
-      .socials-item{
-        width: 44px;
-        height: 44px;
-       }
+          
+      /* socials */
      
-      .socials-item:not(:last-child){
-       margin-right: 10px;
-      }
-      .socials-link{
-       color:#AFB1B8;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items:center;
-        justify-content:center;
-         border-radius:50% ; 
-        transition:color 250ms var(--timing-function), background-color 250ms var(--timing-function);
-    
-
-      }
-
-      .socials-link:hover,
-      .socials-link:focus{
-        background-color: var(--accent-color);
-        color:white;
-      }
-      .socials-icon{
-        fill: currentColor;
-        }
-     
-     
+     /* perfomans */
  .perfomance-items{
   display: flex;
   
@@ -987,10 +587,7 @@ color: var(--accent-color);
 
 }
 
-.flex-wrap
-.filter-item:not(:last-child)
-.filter-item:not(:last-child)
-.flex-wrap
+
 
 
 
