--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,21 @@
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
+@keyframes share {
+  0% {
+    transform: translate(10px);
+  }
+  25% {
+    transform: translate(-20px);
+  }
+  75% {
+    transform: translate(10px);
+  }
+  0% {
+    transform: translate(0px);
+  }
+}
+
 body {
   background-color: #FFFFFF;
   color: var(--title-text-color);
@@ -45,19 +60,9 @@ img {
   height: auto;
 }
 
-@keyframes share {
-  0% {
-    transform: translate(10px);
-  }
-  25% {
-    transform: translate(-20px);
-  }
-  75% {
-    transform: translate(10px);
-  }
-  0% {
-    transform: translate(0px);
-  }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .container {
@@ -103,9 +108,246 @@ img {
   fill: currentColor;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+.backdrop {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  transition: opacity 250ms,visibility 250ms;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
+  position: absolute;
+  background-color: var(--primary-white-color);
+  width: 528px;
+  min-height: 581px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms var(--timing-function);
+}
+
+.button-open {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background-color: var(--primary-white-color);
+}
+
+.modal-icon {
+  width: 18px;
+  height: 18px;
+  fill: #000000;
+  cursor: pointer;
+  transition: fill 250ms var(--timing-function);
+}
+
+.modal-icon:hover,
+.modal-icon:focus {
+  fill: #2196F3;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50% -50%) scale(0.9);
+}
+
+.modal-form {
+  padding: 35px;
+}
+
+.modal-form-field {
+  margin-bottom: 12px;
+  /* margin-top: 20px; */
+}
+
+.modal-check-field {
+  margin-bottom: 30px;
+}
+
+.modal-comments-field {
+  margin-bottom: 20px;
+}
+
+.modal-form-input {
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 40px;
+  display: block;
+  transition: border 250ms var(--timing-function);
+}
+
+.modal-form-input:focus + .modal-form-label,
+.modal-form-input:not(:placeholder-shown) + .modal-form-label {
+  transform: translateY(-50px);
+}
+
+.modal-form-input:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.modal-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 12px;
+  display: block;
+}
+
+.form-button {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  text-align: center;
+  background-color: #188CE8;
+  color: var(--primary-white-color);
+  width: 200px;
+  height: 50px;
+  margin-left: 149px;
+  border-radius: 4px;
+  border: 0;
+}
+
+.modal-form-label {
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  text-align: left;
+  margin-bottom: 4px;
+  margin-bottom: 4px;
+  color: var(--secondary-color);
+}
+
+.form-comment {
+  width: 448px;
+  height: 138px;
+  padding: 16px 12px;
+  margin-left: 55px;
+  border-radius: 4px;
+  border: 1px solid var(--title-text-color);
+  resize: none;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  text-align: left;
+  color: var(--secondary-color);
+}
+
+.comment-label {
+  margin-top: 10px;
+  margin-bottom: 4px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  text-align: left;
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms var(--timing-function);
+  fill: currentColor;
+  cursor: pointer;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.input-wrap {
+  display: block;
+  position: relative;
+}
+
+.modal-coment {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  resize: none;
+  color: var(--secondary-color);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  text-align: left;
+}
+
+.modal-coment:focus + .modal-form-label,
+.modal-coment:not(:placeholder-shown) + .modal-form-label {
+  transform: translateY(-50px);
+}
+
+.check-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: var(--secondary-color);
+  padding-top: 20px;
+}
+
+.check-label::before {
+  content: '';
+  display: block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border-radius: 2px;
+  border: 2px solid var(--secondary-color);
+  color: var(--title-text-color);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  /* border: none; */
+  transition: background 250ms var(--timing-function);
+}
+
+.checkbox:checked + .check-label::before {
+  background: var(--accent-color);
+  background-image: url("../images/check.svg");
+}
+
+.label-item {
+  color: var(--accent-color);
 }
 
 .header {
@@ -638,5 +880,113 @@ img {
 
 .footer-imput:not(:placeholder-shown):required:invalid {
   background-color: #2F303A;
+}
+
+.filter-list {
+  margin-bottom: 50px;
+  justify-content: center;
+  display: flex;
+  color: var(title-text-color);
+}
+
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filter-button {
+  border: transparent;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  min-width: 73px;
+  padding: 6px 22px 6px 22px;
+  border-radius: 4px;
+  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
+}
+
+.filter-button:hover,
+.filter-button:focus {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.portfolio {
+  margin-left: -30px;
+  margin-top: -30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-items {
+  flex-basis: calc(100% / 3 -30px);
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.portfolio-link {
+  display: block;
+  text-decoration: none;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px #00000029;
+}
+
+.portfolio-desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  justify-content: center;
+  color: var(--primary-white-color);
+  background-color: rgba(33, 159, 243, 0.9);
+  overflow: hidden;
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function);
+}
+
+.portfolio-items:hover .portfolio-desc,
+.portfolio-items:focus .portfolio-desc {
+  transform: translateY(0%);
+}
+
+.cards:hover .portfolio-link,
+.cards:focus .portfolio-link {
+  color: rgba(47, 48, 50, 0.4), rgba(47, 48, 50, 0.4);
+}
+
+.cards-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2.0;
+  letter-spacing: 0.06;
+}
+
+.portfolio-text {
+  margin-top: 4px;
+  color: var(--secondary-color);
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+}
+
+/* CARDS         */
+.portfolio-content {
+  padding: 20px 24px 20px 24px;
 }
 /*# sourceMappingURL=main.css.map */
