--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 :root {
-  /* --primary-text-color:rgba 0,0,0,0.8; */
   --title-text-color:#212121;
   --accent-color: #2196F3;
   --secondary-color: #757575;
@@ -98,26 +97,13 @@ img {
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function);
 }
 
-.socials-link:hover,
-.socials-link:focus {
+.socials-link:hover, .socials-link:focus {
   background-color: var(--accent-color);
   color: white;
 }
 
 .socials-icon {
   fill: currentColor;
-}
-
-.backdrop {
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  transition: opacity 250ms,visibility 250ms;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .modal {
@@ -158,16 +144,6 @@ img {
 .modal-icon:hover,
 .modal-icon:focus {
   fill: #2196F3;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50% -50%) scale(0.9);
 }
 
 .modal-form {
@@ -350,8 +326,35 @@ img {
   color: var(--accent-color);
 }
 
+.backdrop {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  transition: opacity 250ms,visibility 250ms;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50% -50%) scale(0.9);
+}
+
 .header {
   border-bottom: 1px solid #ECECEC;
+}
+
+.main-header {
+  display: flex;
+  align-items: center;
 }
 
 .header-logo {
@@ -376,7 +379,6 @@ img {
 
 .header-list {
   display: flex;
-  text-align: left;
 }
 
 .current::after {
@@ -390,7 +392,20 @@ img {
   background-color: var(--accent-color);
 }
 
-.header-link {
+.header-list__item {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+
+.header-list__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-list__link {
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -402,22 +417,30 @@ img {
   transition: color 250ms var(--timing-function);
 }
 
+.header-list__link:hover, .header-list__link:focus {
+  color: var(--accent-color);
+}
+
 .current {
   color: var(--accent-color);
 }
 
-.header-link:hover,
-.header-link:focus {
-  color: var(--accent-color);
+/* .contacs{  */
+.contacs {
+  margin-left: auto;
+  display: flex;
 }
 
-.main-header {
+.contacs-header__contacs {
   display: flex;
   align-items: center;
 }
 
-/* .contacs{  */
-.mail-link {
+.contacs-header__contacs:not(:last-child) {
+  margin-right: 30px;
+}
+
+.contacs-mail__link {
   display: flex;
   align-items: center;
   font-size: 14px;
@@ -430,23 +453,14 @@ img {
   transition: color 250ms var(--timing-function);
 }
 
-.header-contacs .link:hover,
-.header-contacs .link:focus {
+.contacs-header__contacs .link:hover,
+.contacs-header__contacs .link:focus {
   color: var(--accent-color);
 }
 
 .contacs {
   margin-left: auto;
   display: flex;
-}
-
-.header-contacs {
-  display: flex;
-  align-items: center;
-}
-
-.header-contacs:not(:last-child) {
-  margin-right: 30px;
 }
 
 .mail-icon {
@@ -459,19 +473,6 @@ img {
   fill: currentColor;
 }
 
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-item {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-}
-
 .section-hero {
   background-color: #2F303A;
   padding-top: 200px;
@@ -482,7 +483,7 @@ img {
   background-size: cover;
 }
 
-.hero-title {
+.section-hero-hero__title {
   font-size: 44px;
   font-weight: 900;
   line-height: 1.36;
@@ -493,12 +494,7 @@ img {
   margin-bottom: 30px;
 }
 
-.hero-button:hover,
-.hero-button:focus {
-  background-color: var(--accent-color);
-}
-
-.hero-button {
+.section-hero-hero__button {
   display: block;
   cursor: pointer;
   width: 200px;
@@ -515,6 +511,10 @@ img {
   margin-left: auto;
   margin-right: auto;
   transition: backgroud-color 250ms var(--timing-function);
+}
+
+.section-hero-hero__button:hover, .section-hero-hero__button:focus {
+  background-color: var(--accent-color);
 }
 
 .feature {
@@ -534,14 +534,6 @@ img {
 
 .feature-item:not(:last-child) {
   margin-right: 30px;
-}
-
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
 }
 
 .visually-hidden {
@@ -701,8 +693,7 @@ img {
   transition: border-color 250ms var(--timing-function), color 250ms var(--timing-function);
 }
 
-.perfomance-link:hover,
-.perfomance-link:focus {
+.perfomance-link:hover, .perfomance-link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
@@ -760,11 +751,6 @@ img {
   margin-bottom: 9px;
 }
 
-.footer-link:hover,
-.footer-link:focus {
-  color: var(--accent-color);
-}
-
 .footer-link-adress:hover,
 .footer-link-adress:focus {
   color: var(--accent-color);
@@ -772,6 +758,10 @@ img {
 
 .footer-link {
   transition: color 250ms var(--timing-function);
+}
+
+.footer-link:hover, .footer-link:focus {
+  color: var(--accent-color);
 }
 
 /* FOOTER-SOCIALS */
@@ -805,8 +795,7 @@ img {
   transition: background-color 250ms var(--timing-function);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-link:hover, .social-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -906,8 +895,7 @@ img {
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter-button:hover, .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -932,8 +920,8 @@ img {
   text-decoration: none;
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio-link :hover,
+.portfolio-link :focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px #00000029;
 }
 
