--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,15 +1,15 @@
-.backdrop{
-    position:fixed ;
-    height: 100vh;
-    width: 100vw;
-  transition:opacity 250ms,visibility 250ms;
-    box-shadow: 0px 1px 1px rgba(0,0,0,0.12),0px 4px 4px rgba(0,0,0,0.6),
-   1px 4px 6px rgba(0,0,0,0.16);
-    top: 0;
-    display: flex;
-    align-items:center;
-    justify-content: center;
-  }
+// .backdrop{
+//     position:fixed ;
+//     height: 100vh;
+//     width: 100vw;
+//     transition:opacity 250ms,visibility 250ms;
+//     box-shadow: 0px 1px 1px rgba(0,0,0,0.12),0px 4px 4px rgba(0,0,0,0.6),
+//     1px 4px 6px rgba(0,0,0,0.16);
+//     top: 0;
+//     display: flex;
+//     align-items:center;
+//     justify-content: center;
+//   }
   .modal{
    position: absolute;
     background-color: var( --primary-white-color) ;
@@ -50,14 +50,7 @@
   .modal-icon:focus{
     fill: #2196F3;
   }
-  .backdrop.is-hidden{
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  }
-  .backdrop.is-hidden .modal{
-    transform: translate(-50% -50%) scale(0.9);
-  }
+ 
   
   .modal-form{
     padding: 35px;
@@ -108,30 +101,30 @@
     }
   
   .form-button{
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0.06em;
-  text-align: center;
-  background-color: #188CE8;
-  color: var(--primary-white-color);
-  width: 200px;
-  height: 50px;
-  margin-left: 149px;
-  border-radius: 4px;
-  border: 0;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    text-align: center;
+    background-color: #188CE8;
+    color: var(--primary-white-color);
+    width: 200px;
+    height: 50px;
+    margin-left: 149px;
+    border-radius: 4px;
+    border: 0;
   }
   
   .modal-form-label{
-   display: block;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  text-align: left;
-  margin-bottom: 4px;
-  margin-bottom: 4px;
-  color: var(--secondary-color);
+    display: block;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    text-align: left;
+    margin-bottom: 4px;
+    margin-bottom: 4px;
+    color: var(--secondary-color);
   
   }
   
@@ -143,23 +136,23 @@
     border-radius:4px;
     border: 1px solid var(--title-text-color);
     resize: none;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  text-align: left;
-  color: var(--secondary-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    text-align: left;
+    color: var(--secondary-color);
   
   }
   .comment-label{
-  margin-top: 10px;
-  margin-bottom: 4px; 
-  font-size: 12px;
-  
-  font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  text-align: left;
+    margin-top: 10px;
+    margin-bottom: 4px; 
+    font-size: 12px;
+    
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    text-align: left;
   
   }
   .modal-form-icon{
@@ -181,54 +174,54 @@
   
   }
   .modal-coment{
-  display: block;
-  width: 100%;
-   height: 120px; 
-  padding:12px 16px;
-   border-radius:4px;
-   border: 1px solid rgba(33,33,33,0.2);
-   resize: none;
-   color: var(--secondary-color);
-   font-size: 12px;
-  font-weight: 400;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  text-align: left;
+    display: block;
+    width: 100%;
+    height: 120px; 
+    padding:12px 16px;
+    border-radius:4px;
+    border: 1px solid rgba(33,33,33,0.2);
+    resize: none;
+    color: var(--secondary-color);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    text-align: left;
   }
   
   .modal-coment:focus + .modal-form-label,
   .modal-coment:not(:placeholder-shown) + .modal-form-label{
     transform:translateY(-50px);
   }
-    .check-label{
-   display: flex;
-  justify-content: center;
-  align-items:center;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  text-align: left;
-  color: var(--secondary-color);
-  padding-top: 20px;
+  .check-label{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: var(--secondary-color);
+    padding-top: 20px;
   
   }
   
-  .check-label::before{
+.check-label::before{
     content:'';
     display: block;
     width: 16px;
     height: 15px;
     margin-right: 7px;
     border-radius: 2px;
-   border:2px solid  var(--secondary-color); 
-   color: var(--title-text-color);
-   background-repeat:no-repeat;
-   background-size:contain;
-   background-position:center;
-   /* border: none; */
-   transition: background 250ms var(--timing-function);
+    border:2px solid  var(--secondary-color); 
+    color: var(--title-text-color);
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center;
+    /* border: none; */
+    transition: background 250ms var(--timing-function);
   }
   
   .checkbox:checked + .check-label::before{
@@ -236,8 +229,8 @@
     background-image: url("../images/check.svg");
    
   }
-  .label-item{
-  color: var(--accent-color);
+.label-item{
+   color: var(--accent-color);
   
   
   }
