--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,32 +1,40 @@
 .socials-list{
     justify-content: center;
-     display: flex;
+    display: flex;
      
    }
-   .socials-item{
-     width: 44px;
-     height: 44px;
-    }
-  
-   .socials-item:not(:last-child){
+.socials-item{
+    width: 44px;
+    height: 44px;
+    &:not(:last-child){
     margin-right: 10px;
-   }
-   .socials-link{
+  }
+}
+  
+// .socials-item:not(:last-child){
+//     margin-right: 10px;
+//    }
+
+.socials-link{
     color:#AFB1B8;
-     width: 100%;
-     height: 100%;
-     display: flex;
-     align-items:center;
-     justify-content:center;
-      border-radius:50% ; 
-     transition:color 250ms var(--timing-function), background-color 250ms var(--timing-function);
- 
-    }
-  .socials-link:hover,
-   .socials-link:focus{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items:center;
+    justify-content:center;
+    border-radius:50% ; 
+    transition:color 250ms var(--timing-function), background-color 250ms var(--timing-function);
+    &:hover,
+    &:focus{
      background-color: var(--accent-color);
      color:white;
    }
-   .socials-icon{
+    }
+  // .socials-link:hover,
+  //  .socials-link:focus{
+  //    background-color: var(--accent-color);
+  //    color:white;
+  //  }
+.socials-icon{
      fill: currentColor;
      }
