--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer{ 
-    background-color: #2F303A;
-    padding-top: 60px;
-    padding-bottom: 60px;  
+  background-color: #2F303A;
+  padding-top: 60px;
+  padding-bottom: 60px;  
   }
  
 .footer-content{
@@ -10,23 +10,23 @@
 }
 
 .footer-logo-studio{
-flex-grow: 1;
+  flex-grow: 1;
 }
 
 .footer-logo{
-display: block;
-margin-bottom: 20px;  
-font-family: Raleway,sans-serif;
-font-size: 26px;
-font-weight: 700;
-line-height: 1.19;
-letter-spacing: 0.03em;
-color: var(--accent-color);
+  display: block;
+  margin-bottom: 20px;  
+  font-family: Raleway,sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
 
-    .footer-logo-link{
+.footer-logo-link{
 
-color: var(--primary-white-color);
+  color: var(--primary-white-color);
 }
 .footer-link-adress{
   color: var(--primary-white-color); 
@@ -37,66 +37,79 @@ color: var(--primary-white-color);
 }
 
 
- .footer-item .link{ 
-  
+.footer-item { 
+.link{
   color: rgba(255, 255, 255, 0.6); 
-    font-size: 14px;
-    line-height: 1.17; 
-    font-style: normal;  
+  font-size: 14px;
+  line-height: 1.17; 
+  font-style: normal;  
+}
 }
 .footer-item:not(:last-child){
   margin-bottom: 9px;
 }
 
-.footer-link:hover,
-.footer-link:focus{
-color: var(--accent-color);
-}    
+// .footer-link:hover,
+// .footer-link:focus{
+//   color: var(--accent-color);
+// }  
+
+
+  
+    
 
 .footer-link-adress:hover,
 .footer-link-adress:focus{
-color: var(--accent-color);
+  color: var(--accent-color);
 }    
 .footer-link{
- transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+   &:hover,
+   &:focus{
+   color: var(--accent-color);
+}  
 }
  
 /* FOOTER-SOCIALS */
 
 .socials-footer{
-margin-left: 70px;
+  margin-left: 70px;
 
 }
 .socials-title{
- text-transform:uppercase; 
-margin-bottom: 20px;
-font-size: 14px;
-font-weight: bold;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-align: left;
-color: var(--primary-white-color);
+  text-transform:uppercase; 
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: var(--primary-white-color);
 
 } 
 
- .social-item:not(:last-child){
-  margin-right: 10px;
+.social-item:not(:last-child){
+   margin-right: 10px;
  }
- .social-link{
-   width: 44px;
-   height: 44px;
-   display: flex;
-   align-items:center;
-   justify-content:center;
-    border-radius:50% ; 
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: background-color 250ms var(--timing-function);
- }
- .social-link:hover,
- .social-link:focus{
-  background-color: var(--accent-color);
- }
- .social-icon{
+.social-link{
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  border-radius:50% ; 
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms var(--timing-function);
+  &:hover,
+  &:focus{
+    background-color: var(--accent-color);
+   }
+}
+// .social-link:hover,
+// .social-link:focus{
+//   background-color: var(--accent-color);
+//  }
+.social-icon{
    fill: #FFFFFF;
  }
 
@@ -108,8 +121,8 @@ margin-left: 93px;
 
 
 .footer-deck input{
- display: inline-block;
- width: 358px;
+  display: inline-block;
+  width: 358px;
   height: 50px;
   font-size: 16px;
   font-weight: 400;
@@ -128,8 +141,8 @@ margin-left: 93px;
 
 
 .footer-form-title{
-margin-bottom: 20px;
-display: block;
+  margin-bottom: 20px;
+  display: block;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 700;
