--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -5,55 +5,69 @@
      color:var(title-text-color); 
    }
   
-      .filter-item:not(:last-child){
+.filter-item:not(:last-child){
        margin-right: 8px; 
       }
     
-       .filter-button{
+.filter-button{
        border:transparent;
        cursor:pointer;
        font-size: 16px;
        font-weight: 500;
        line-height: 1.62;
        letter-spacing: 0.03em;
-        min-width: 73px;
-        padding: 6px 22px 6px 22px;
-        border-radius: 4px;
-        transition:color 250ms var(--timing-function),background-color 250ms var(--timing-function),box-shadow 250ms var(--timing-function);
-    }
-     
-       .filter-button:hover,
-    .filter-button:focus{
-      background-color: var(--accent-color);
-      color: var(--primary-white-color);
-      box-shadow:0px 3px 1px rgba(0,0,0,0.1), 0px 1px 2px rgba(0,0,0,0.08),
-      0px 2px 2px rgba(0,0,0,0.12);
-      border-radius:4px
-     }
-     
-      .portfolio {                
+       min-width: 73px;
+       padding: 6px 22px 6px 22px;
+       border-radius: 4px;
+       transition:color 250ms var(--timing-function),background-color 250ms var(--timing-function),box-shadow 250ms var(--timing-function);
+       &:hover,
+       &:focus{
+              background-color: var(--accent-color);
+              color: var(--primary-white-color);
+              box-shadow:0px 3px 1px rgba(0,0,0,0.1), 0px 1px 2px rgba(0,0,0,0.08),
+              0px 2px 2px rgba(0,0,0,0.12);
+              border-radius:4px
+             }
+      }
+// .filter-button:hover,
+// .filter-button:focus{
+//       background-color: var(--accent-color);
+//       color: var(--primary-white-color);
+//       box-shadow:0px 3px 1px rgba(0,0,0,0.1), 0px 1px 2px rgba(0,0,0,0.08),
+//       0px 2px 2px rgba(0,0,0,0.12);
+//       border-radius:4px
+//      }
+
+.portfolio {                
          margin-left:-30px;
         margin-top: -30px; 
         display: flex;
         flex-wrap: wrap;
          }
          
-       .portfolio-items{
+.portfolio-items{
          
            flex-basis:calc(100% / 3 -30px);
            margin-left:30px;
            margin-top: 30px;  
-         } 
-          .portfolio-link{
+         
+          } 
+.portfolio-link{
             display: block;
             text-decoration: none;
-          }
-          .portfolio-link:hover,
-          .portfolio-link:focus{
+            :hover,
+            :focus{
             box-shadow:0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06),
             1px 4px 6px #00000029
-         }
-       .portfolio-desc{
+                     }
+          }
+// .portfolio-link:hover,
+// .portfolio-link:focus{
+//             box-shadow:0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06),
+//             1px 4px 6px #00000029
+//          }
+
+.portfolio-desc{
          position: absolute;
          top: 0;
          left: 0;
@@ -69,21 +83,21 @@
          transform: translateY(100%);
          transition: transform 250ms var(--timing-function);
        }
-          .portfolio-items:hover .portfolio-desc,
-          .portfolio-items:focus .portfolio-desc{
+.portfolio-items:hover .portfolio-desc,
+.portfolio-items:focus .portfolio-desc{
          transform: translateY(0%);
        }
        
-       .cards:hover .portfolio-link,
-       .cards:focus .portfolio-link{
+.cards:hover .portfolio-link,
+.cards:focus .portfolio-link{
            color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
          }
-         .cards-thumb{
+.cards-thumb{
            position: relative;
            overflow: hidden;
          }
       
-        .portfolio-title{
+.portfolio-title{
          color: var(--title-text-color) ;
           font-weight: 700;
           font-size:18px; 
@@ -92,7 +106,7 @@
         
          
         } 
-       .portfolio-text{
+.portfolio-text{
         margin-top: 4px;
          color: var( --secondary-color);
          font-size: 16px;
@@ -102,7 +116,7 @@
      
      /* CARDS         */
      
-     .portfolio-content{
+.portfolio-content{
       padding:20px 24px 20px 24px;
 
      }
