--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,12 @@
 @import'./utils/vars';
 @import'./utils/animations';
+@import'./utils/variables';
 @import'./base/reset';
 @import'./base/section';
 @import'./base/container';
 @import'./components/socials';
 @import'./components/modal';
+@import'./components/backdrop';
 @import'./layout/header';
 @import'./layout/hero';
 @import'./layout/feature';
@@ -13,6 +15,8 @@
 @import'./layout/perfomanse';
 @import'./layout/footer';
 @import'./layout/portfolio';
+
+
 
 
 
