--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import'./utils/vars';
 @import'./utils/animations';
 @import'./utils/variables';
+@import'./utils/mixins';
 @import'./base/reset';
 @import'./base/section';
 @import'./base/container';
