--- a/css/main.css
+++ b/css/main.css
@@ -185,8 +185,8 @@ img {
 
 .modal-title {
   font-size: 20px;
-  font-weight: 700;
   line-height: 1.15;
+  font-weight: 700;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--title-text-color);
@@ -196,8 +196,8 @@ img {
 
 .form-button {
   font-size: 16px;
+  line-height: 1.87;
   font-weight: 700;
-  line-height: 30px;
   letter-spacing: 0.06em;
   text-align: center;
   background-color: #188CE8;
@@ -210,11 +210,11 @@ img {
 }
 
 .modal-form-label {
-  display: block;
   font-size: 12px;
-  font-weight: 400;
   line-height: 1.16;
+  font-weight: 400;
   letter-spacing: 0.01em;
+  display: block;
   text-align: left;
   margin-bottom: 4px;
   margin-bottom: 4px;
@@ -222,6 +222,10 @@ img {
 }
 
 .form-comment {
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 400;
+  letter-spacing: 0.01em;
   width: 448px;
   height: 138px;
   padding: 16px 12px;
@@ -229,21 +233,17 @@ img {
   border-radius: 4px;
   border: 1px solid var(--title-text-color);
   resize: none;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
   text-align: left;
   color: var(--secondary-color);
 }
 
 .comment-label {
+  font-size: 12px;
+  line-height: 1.16;
+  font-weight: 400;
+  letter-spacing: 0.01em;
   margin-top: 10px;
   margin-bottom: 4px;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 0.01em;
   text-align: left;
 }
 
@@ -267,6 +267,10 @@ img {
 }
 
 .modal-coment {
+  font-size: 12px;
+  line-height: 1.16;
+  font-weight: 400;
+  letter-spacing: 0.01em;
   display: block;
   width: 100%;
   height: 120px;
@@ -275,10 +279,6 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   resize: none;
   color: var(--secondary-color);
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
   text-align: left;
 }
 
@@ -288,14 +288,13 @@ img {
 }
 
 .check-label {
+  font-size: 14px;
+  line-height: 1.7;
+  font-weight: 400;
+  letter-spacing: 0.03em;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
   text-align: left;
   color: var(--secondary-color);
   padding-top: 20px;
@@ -358,13 +357,13 @@ img {
 }
 
 .header-logo {
+  font-size: 26px;
+  line-height: 1.19;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   display: flex;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   margin-right: 93px;
 }
 
@@ -393,12 +392,12 @@ img {
 }
 
 .header-list__item {
+  font-size: 1.17;
+  line-height: 1.14;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   display: flex;
   align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
 }
 
 .header-list__item:not(:last-child) {
@@ -406,13 +405,13 @@ img {
 }
 
 .header-list__link {
+  font-size: 0.02em;
+  line-height: 1.14;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color 250ms var(--timing-function);
 }
@@ -441,12 +440,12 @@ img {
 }
 
 .contacs-mail__link {
+  font-size: 0.02em;
+  line-height: 1.14;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   display: flex;
   align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--secondary-color);
   padding-top: 32px;
   padding-bottom: 32px;
@@ -485,8 +484,8 @@ img {
 
 .section-hero-hero__title {
   font-size: 44px;
-  font-weight: 900;
   line-height: 1.36;
+  font-weight: 900;
   letter-spacing: 0.06em;
   text-align: center;
   color: var(--primary-white-color);
@@ -495,16 +494,16 @@ img {
 }
 
 .section-hero-hero__button {
+  font-size: 16px;
+  line-height: 1.85;
+  font-weight: 700;
+  letter-spacing: 0.06em;
   display: block;
   cursor: pointer;
   width: 200px;
   height: 50px;
   border-radius: 4px;
   border: transparent;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.85;
-  letter-spacing: 0.06em;
   text-align: center;
   background-color: #188CE8;
   color: var(--primary-white-color);
@@ -532,7 +531,7 @@ img {
   border-radius: 4px;
 }
 
-.feature-item:not(:last-child) {
+.feature-feature__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -569,16 +568,20 @@ img {
 }
 
 .works-title {
-  margin-bottom: 50px;
   font-size: 36px;
-  font-weight: 700;
   line-height: 1.16;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
   text-align: center;
   color: var(--title-text-color);
 }
 
 .works-head {
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 700;
+  letter-spacing: 0.03em;
   width: 100%;
   height: 70px;
   position: absolute;
@@ -586,10 +589,6 @@ img {
   align-items: center;
   justify-content: center;
   bottom: 0;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-align: center;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--primary-white-color);
@@ -616,11 +615,11 @@ img {
 }
 
 .team-title {
-  margin-bottom: 50px;
   font-size: 36px;
-  font-weight: 700;
   line-height: 1.16;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -639,16 +638,16 @@ img {
 
 .present-team {
   font-size: 16px;
-  font-weight: 500;
   line-height: 1.18;
+  font-weight: 500;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 
 .team-text {
   font-size: 16px;
+  line-height: 1.18;
   font-weight: 400;
-  line-height: 19px;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
   margin-top: 10px;
@@ -668,11 +667,11 @@ img {
 }
 
 .perfomance-title {
-  margin-bottom: 50px;
   font-size: 36px;
-  font-weight: 700;
   line-height: 1.36;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -883,12 +882,12 @@ img {
 }
 
 .filter-button {
+  font-size: 16px;
+  line-height: 1.62;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   border: transparent;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
   min-width: 73px;
   padding: 6px 22px 6px 22px;
   border-radius: 4px;
@@ -926,14 +925,15 @@ img {
 }
 
 .portfolio-desc {
+  font-size: 18px;
+  line-height: 1.55;
+  font-weight: 400;
+  letter-spacing: 0.03em;
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   padding: 63px 24px;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
   justify-content: center;
   color: var(--primary-white-color);
   background-color: rgba(33, 159, 243, 0.9);
@@ -958,19 +958,20 @@ img {
 }
 
 .portfolio-title {
-  color: var(--title-text-color);
-  font-weight: 700;
   font-size: 18px;
-  line-height: 2.0;
-  letter-spacing: 0.06;
+  line-height: 2;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
 }
 
 .portfolio-text {
-  margin-top: 4px;
-  color: var(--secondary-color);
   font-size: 16px;
   line-height: 1.87;
+  font-weight: 400;
   letter-spacing: 0.03em;
+  margin-top: 4px;
+  color: var(--secondary-color);
 }
 
 /* CARDS         */
