--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -71,7 +71,7 @@
   
   .modal-form-input{
    height: 40px;
-    width:100%;
+   width:100%;
    border: 1px solid rgba(33,33,33,0.2);
    border-radius:4px;
    padding-left: 40px;
@@ -90,10 +90,7 @@
    
   
   .modal-title{
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 1.15;
-    letter-spacing: 0.03em;
+    @include font(20px, 1.15, 700);
     text-align: center;
     color: var(--title-text-color) ;
     margin-bottom: 12px;
@@ -101,10 +98,7 @@
     }
   
   .form-button{
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 30px;
-    letter-spacing: 0.06em;
+    @include font(16px, 1.87, 700, 0.06em);
     text-align: center;
     background-color: #188CE8;
     color: var(--primary-white-color);
@@ -116,11 +110,8 @@
   }
   
   .modal-form-label{
+    @include font(12px, 1.16, 400, 0.01em);
     display: block;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
     text-align: left;
     margin-bottom: 4px;
     margin-bottom: 4px;
@@ -129,6 +120,7 @@
   }
   
   .form-comment{
+    @include font(14px, 1.14, 400, 0.01em);
     width: 448px;
     height: 138px;
     padding: 16px 12px;
@@ -136,22 +128,14 @@
     border-radius:4px;
     border: 1px solid var(--title-text-color);
     resize: none;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.14;
-    letter-spacing: 0.01em;
     text-align: left;
     color: var(--secondary-color);
   
   }
   .comment-label{
+    @include font(12px, 1.16, 400, 0.01em);
     margin-top: 10px;
     margin-bottom: 4px; 
-    font-size: 12px;
-    
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0.01em;
     text-align: left;
   
   }
@@ -174,6 +158,7 @@
   
   }
   .modal-coment{
+    @include font(12px, 1.16, 400, 0.01em);
     display: block;
     width: 100%;
     height: 120px; 
@@ -182,10 +167,6 @@
     border: 1px solid rgba(33,33,33,0.2);
     resize: none;
     color: var(--secondary-color);
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
     text-align: left;
   }
   
@@ -194,14 +175,10 @@
     transform:translateY(-50px);
   }
   .check-label{
+    @include font(14px, 1.7, 400);
     display: flex;
     justify-content: center;
     align-items:center;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
     text-align: left;
     color: var(--secondary-color);
     padding-top: 20px;
