--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -12,7 +12,7 @@
    border-radius: 4px;
 }
 
-.feature-item:not(:last-child){
+.feature-feature__item:not(:last-child){
   margin-right: 30px; 
    
  }
@@ -29,7 +29,7 @@
   clip: rect(0 0 0 0);
 }
   
-.feature-title{
+.feature-feature__title{
   color: var(title-text-color);
   font-size: 14px;
   font-weight: 700;
