--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,13 +7,14 @@
     align-items: center;
   }
 .header-logo{
+  @include font(26px, 1.19, 500, 0.03em);
   display: flex;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  // font-size: 26px;
+  // font-weight: 700;
+  // line-height: 1.19;
+  // letter-spacing: 0.03em;
   margin-right: 93px;
   
   }
@@ -43,12 +44,13 @@
 
 }
 .header-list__item{
+  @include font(1.17);
   display:flex;
   align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
+  // font-size: 14px;
+  // font-weight: 500;
+  // line-height: 1.17;
+  // letter-spacing: 0.03em;
   &:not(:last-child){
   margin-right: 50px;
      }   
@@ -56,13 +58,10 @@
 
 
 .header-list__link  {
+  @include font( 0.02em); 
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition:color 250ms var(--timing-function);
     &:hover,
@@ -98,12 +97,9 @@
           }     
 
 .contacs-mail__link{
+  @include font(0.02em);
   display: flex;
   align-items:center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--secondary-color);
   padding-top: 32px;
   padding-bottom: 32px;
