--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,10 +9,11 @@
     background-size: cover;
    }
      .section-hero-hero__title{
-    font-size: 44px;
-    font-weight: 900;
-    line-height:1.36;
-    letter-spacing: 0.06em;
+    @include font(44px, 1.36, 900, 0.06em);
+    //   font-size: 44px;
+    // font-weight: 900;
+    // line-height:1.36;
+    // letter-spacing: 0.06em;
     text-align: center;
     color: var(--primary-white-color);
     text-transform: uppercase;
@@ -25,16 +26,13 @@
   //   background-color: var(--accent-color);
   //  }
    .section-hero-hero__button{
+    @include font(16px, 1.85, 700, 0.06em);
     display: block;
     cursor: pointer;
     width: 200px;
     height: 50px;
     border-radius:4px;
     border:transparent;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.85;
-    letter-spacing: 0.06em;
     text-align: center;
     background-color:#188CE8;
     color: var(--primary-white-color);
