--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,33 +1,30 @@
 .filter-list{
-    margin-bottom: 50px;
-    justify-content: center; 
-     display: flex;
-     color:var(title-text-color); 
+  margin-bottom: 50px;
+  justify-content: center; 
+  display: flex;
+  color:var(title-text-color); 
    }
   
 .filter-item:not(:last-child){
-       margin-right: 8px; 
+  margin-right: 8px; 
       }
     
 .filter-button{
-       border:transparent;
-       cursor:pointer;
-       font-size: 16px;
-       font-weight: 500;
-       line-height: 1.62;
-       letter-spacing: 0.03em;
-       min-width: 73px;
-       padding: 6px 22px 6px 22px;
-       border-radius: 4px;
-       transition:color 250ms var(--timing-function),background-color 250ms var(--timing-function),box-shadow 250ms var(--timing-function);
+  @include font(16px, 1.62,);
+  border:transparent;
+  cursor:pointer;
+  min-width: 73px;
+  padding: 6px 22px 6px 22px;
+  border-radius: 4px;
+  transition:color 250ms var(--timing-function),background-color 250ms var(--timing-function),box-shadow 250ms var(--timing-function);
        &:hover,
        &:focus{
-              background-color: var(--accent-color);
-              color: var(--primary-white-color);
-              box-shadow:0px 3px 1px rgba(0,0,0,0.1), 0px 1px 2px rgba(0,0,0,0.08),
-              0px 2px 2px rgba(0,0,0,0.12);
-              border-radius:4px
-             }
+        background-color: var(--accent-color);
+        color: var(--primary-white-color);
+        box-shadow:0px 3px 1px rgba(0,0,0,0.1), 0px 1px 2px rgba(0,0,0,0.08),
+        0px 2px 2px rgba(0,0,0,0.12);
+        border-radius:4px
+        }
       }
 // .filter-button:hover,
 // .filter-button:focus{
@@ -39,27 +36,26 @@
 //      }
 
 .portfolio {                
-         margin-left:-30px;
-        margin-top: -30px; 
-        display: flex;
-        flex-wrap: wrap;
-         }
+  margin-left:-30px;
+  margin-top: -30px; 
+  display: flex;
+  flex-wrap: wrap;
+      }
          
 .portfolio-items{
-         
-           flex-basis:calc(100% / 3 -30px);
-           margin-left:30px;
-           margin-top: 30px;  
+  flex-basis:calc(100% / 3 -30px);
+  margin-left:30px;
+  margin-top: 30px;  
          
           } 
 .portfolio-link{
-            display: block;
-            text-decoration: none;
-            :hover,
-            :focus{
-            box-shadow:0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06),
-            1px 4px 6px #00000029
-                     }
+  display: block;
+  text-decoration: none;
+  :hover,
+  :focus{
+  box-shadow:0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06),
+  1px 4px 6px #00000029
+            }
           }
 // .portfolio-link:hover,
 // .portfolio-link:focus{
@@ -68,56 +64,51 @@
 //          }
 
 .portfolio-desc{
-         position: absolute;
-         top: 0;
-         left: 0;
-         height: 100%;
-        padding: 63px 24px ;
-         font-size: 18px;
-        line-height: 1.55;
-         letter-spacing: 0.03em;
-         justify-content: center;
-        color: var(--primary-white-color);
-         background-color: rgba(33,159,243,0.9);
-         overflow: hidden;
-         transform: translateY(100%);
-         transition: transform 250ms var(--timing-function);
+  @include font(18px, 1.55, 400, 0.03em);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 63px 24px ;
+  justify-content: center;
+  color: var(--primary-white-color);
+  background-color: rgba(33,159,243,0.9);
+  overflow: hidden;
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function);
        }
 .portfolio-items:hover .portfolio-desc,
 .portfolio-items:focus .portfolio-desc{
-         transform: translateY(0%);
+  transform: translateY(0%);
        }
        
 .cards:hover .portfolio-link,
 .cards:focus .portfolio-link{
-           color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
+  color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
          }
 .cards-thumb{
-           position: relative;
-           overflow: hidden;
+  position: relative;
+  overflow: hidden;
          }
       
 .portfolio-title{
-         color: var(--title-text-color) ;
-          font-weight: 700;
-          font-size:18px; 
-          line-height:2.0;
-          letter-spacing: 0.06;
+  @include font(18px, 2.0, 700, 0.06em);      
+  color: var(--title-text-color) ;
+         
         
          
         } 
 .portfolio-text{
-        margin-top: 4px;
-         color: var( --secondary-color);
-         font-size: 16px;
-         line-height:1.87 ;
-         letter-spacing: 0.03em;
+  @include font(16px, 1.87, 400, 0.03em);      
+  margin-top: 4px;
+  color: var( --secondary-color);
+        
      }  
      
      /* CARDS         */
      
 .portfolio-content{
-      padding:20px 24px 20px 24px;
+  padding:20px 24px 20px 24px;
 
      }
  
