--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,13 +1,10 @@
 .section-team{
-    background-color: #F5F4FA;
+  background-color: #F5F4FA;
     }
 .team-title{ 
-       margin-bottom: 50px;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.16;
-        letter-spacing: 0.03em;
-        text-align: center; 
+  @include font(36px, 1.16, 700);
+  margin-bottom: 50px;
+  text-align: center; 
 } 
    
 .team-items{ 
@@ -15,30 +12,24 @@
   margin-left: -30px; 
    }
 .team-items> .team-img{ 
-    flex-basis: calc(100% /4 -30px); 
-    margin-left:30px; 
-    border-bottom-left-radius: 4px; 
-    border-bottom-right-radius: 4px;
-     background-color: #FFFFFF;
+  flex-basis: calc(100% /4 -30px); 
+  margin-left:30px; 
+  border-bottom-left-radius: 4px; 
+  border-bottom-right-radius: 4px;
+  background-color: #FFFFFF;
    }  
 
 .present-team{
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color); 
+  @include font(16px, 1.18, 500); 
+  color: var(--title-text-color); 
    
 }
 
 .team-text{
- font-size: 16px;
-font-weight: 400;
-line-height: 19px;
-letter-spacing: 0.03em;
-color: var(--secondary-color);  
- margin-top: 10px;
- margin-bottom: 16px;
+  @include font(16px, 1.18, 400);
+  color: var(--secondary-color);  
+  margin-top: 10px;
+  margin-bottom: 16px;
  }
 .card-thumb{
   align-items:center;
