--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -45,8 +45,8 @@
 }
 .header-list__item{
   @include font(1.17);
-  display:flex;
-  align-items: center;
+  // display:flex;
+  // align-items: center;
   // font-size: 14px;
   // font-weight: 500;
   // line-height: 1.17;
