--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,7 +29,7 @@
       }
 .header-list{ 
   display:flex; 
-  // text-align: left;
+
     } 
          
 .current::after{
@@ -43,7 +43,7 @@
   background-color: var(--accent-color);
 
 }
-.list-item{
+.header-item {
   @include font(1.17);
   // display:flex;
   // align-items: center;
@@ -56,8 +56,7 @@
      }   
 }
 
-
-.list-link  {
+.header-link {
   @include font( 0.02em); 
   position: relative;
   padding-top: 32px;
@@ -151,7 +150,3 @@
     //           margin-right: 50px;
     //              }   
     //   }
-  
-  
-  
-  
