--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -76,7 +76,7 @@
   margin-left: 70px;
 
 }
-.socials-title{
+.social-caption{
   text-transform:uppercase; 
   margin-bottom: 20px;
   font-size: 14px;
